# walking-hounds

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
docs/: decisions.md  workflow-diagram.md
src/: __init__.py  cli.py  config.py  main.py
src/agents/: __init__.py  base.py  communication.py  intake.py  invoicing.py  logger.py  onboarding.py  reminder.py  scheduling.py
src/bus/: __init__.py  bus.py  event.py  store.py
src/dashboard/: __init__.py  app.py
src/dashboard/static/css/: style.css
src/dashboard/templates/: agents.html  approvals.html  dashboard.html  invoices.html  journal.html  schedule.html
src/dashboard/templates/partials/: approval_list.html  invoice_list.html
src/db/: __init__.py  database.py  models.py  seed.py
src/email/: __init__.py  imap_client.py  smtp_client.py  templates.py
src/llm/: __init__.py  ollama_client.py
src/router/: __init__.py  event.py  router.py  store.py
tests/: conftest.py  test_agent_base.py  test_bus.py  test_communication_agent.py  test_config.py  test_dashboard.py  test_database.py  test_e2e_booking.py  test_e2e_flows.py  test_e2e_groups.py  test_events.py  test_imap_client.py  test_intake_agent.py  test_invoicing_agent.py  test_logger_agent.py  test_ollama_client.py  test_reminder_agent.py  test_router.py  test_scheduling_agent.py  test_smtp_client.py  test_store.py  test_templates.py
