[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "walking-hounds"
version = "0.1.0"
description = "Multi-agent async dog-walking business automation"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.19",
    "aiohttp>=3.9",
    "aioimaplib>=1.0",
    "aiosmtplib>=3.0",
    "click>=8.1",
    "fastapi>=0.100",
    "uvicorn>=0.29",
    "websockets>=10.4",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
walking-hounds = "walking_hounds.cli:cli"

[tool.setuptools.package-dir]
"walking_hounds" = "src"

[tool.setuptools]
packages = ["walking_hounds", "walking_hounds.agents", "walking_hounds.db", "walking_hounds.email", "walking_hounds.llm", "walking_hounds.router", "walking_hounds.dashboard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
